Actualizando vistas HTML con navegación entre páginas

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
     <h2>¿Cómo te llamas?</h2>
     <input placeholder="Escribe tu nombre">
-    <button>Siguiente</button>
+    
+    <a href="pages/inicio.html">
+        <button>Siguiente</button>
+    </a>
+
 </body>
 </html>
