--- a/pages/ecommerce.html
+++ b/pages/ecommerce.html
@@ -52,7 +52,9 @@
     <p>¿En qué canales brindas soporte actualmente (ej. WhatsApp, email, call center)?</p>
     <input>
 
-
-    <button>Finalizar</button>
+    <a href="final.html">
+        <button>Finalizar</button>
+    </a>
+    
 </body>
 </html>
