--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -12,8 +12,13 @@
     <h2>Elige el rubro de tu empresa</h2>
     <p>Selecciona la opción que más se ajuste:</p>
 
-    <button>E-commerce</button>
-    <button>Servicios</button>
+    <a href="ecommerce.html">
+        <button>E-commerce</button>
+    </a>
+    
+    <a href="servicios.html">
+        <button>Servicios</button>
+    </a>
 
 </body>
 </html>
