--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -51,6 +51,9 @@
     <input>
 
 
-    <button>Finalizar</button>
+    <a href="final.html">
+        <button>Finalizar</button>
+    </a>
+    
 </body>
 </html>
