--- a/pages/final.html
+++ b/pages/final.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Botia</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Botia - Finalizado</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <img src="/assents/logoBotia.png" alt="Botia Logo" >
-    <h1>¡Formulario realizado con éxito!🙌</h1>
+  <div class="container">
+    <img src="/assents/logoBotia.png" alt="Botia Logo">
+    <h1>¡Formulario realizado con éxito! 🙌</h1>
     <h2>Por último...</h2>
     <p><strong>Pasos para enviar tu archivo:</strong></p>
     <ol>
-        <li>Ingresa a WhatsApp desde el botón de abajo.</li>
-        <li>Adjunta el archivo descargado en el chat.</li>
-        <li>Envía el mensaje. Nuestro equipo lo recepcionará.</li>
+      <li>Descarga tu archivo PDF:</li>
+      <li>Ingresa a WhatsApp desde el botón de abajo.</li>
+      <li>Adjunta el archivo descargado en el chat.</li>
+      <li>Envía el mensaje. Nuestro equipo lo recepcionará.</li>
     </ol>
 
+    <a id="downloadLink" download="respuestas.pdf">
+      <button type="button">📥 Descargar PDF</button>
+    </a>
+
     <a href="https://wa.me/51977446314?text=Saludos.%20Procedo%20a%20mandar%20el%20archivo%20del%20formulario"
-        target="_blank">
-        <button type="button">Enviar por WhatsApp</button>
+       target="_blank">
+      <button type="button">Enviar por WhatsApp</button>
     </a>
 
     <p>
-        👉Descubre más visitando nuestra página en
-        <a href="https://botia.tech/" target="_blank">Botia Tech</a>.
+      👉 Descubre más visitando nuestra página en
+      <a href="https://botia.tech/" target="_blank">Botia Tech</a>.
     </p>
-</body>
+  </div>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="script.js"></script>
+</body>
 </html>
