--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,59 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Botia</title>
+    <title>Botia - Servicios</title>
+    <link rel="styleheet" href="../css/style.css">
+ <!-- Conexión al CSS -->
 </head>
 <body>
-    <img src="/assents/logoBotia.png" alt="Botia Logo" >
-    <h1>Bienvenido</h1>
+    <div class="container">
+        <img src="/assents/logoBotia.png" alt="Botia Logo" style="max-width: 180px; margin-bottom: 1rem;">
 
-    <p>¿Cuál es el nombre de tu empresa/servicio?</p>
-    <input>
+        <div class="form-section">
+            <h1>Formulario - Servicios</h1>
 
-    <p>¿Qué tipo de servicio ofreces (ej. cursos, citas médicas, asesorías inmobiliarias, 
-    etc.)? </p>
-    <input>
+            <p>¿Cuál es el nombre de tu empresa/servicio?</p>
+            <input type="text" placeholder="Escribe el nombre">
 
-    <p>¿Cuál es tu público objetivo principal (ej. estudiantes, pacientes, familias, 
-    ejecutivos)? </p>
-    <input>
+            <p>¿Qué tipo de servicio ofreces?</p>
+            <input type="text" placeholder="Ej. cursos, citas médicas, asesorías...">
 
-    <p>¿Qué servicios principales deseas automatizar? </p>
-    <input>
+            <p>¿Cuál es tu público objetivo principal?</p>
+            <input type="text" placeholder="Ej. estudiantes, pacientes, ejecutivos...">
 
-    <p>¿Qué información debe brindar el cliente para acceder al servicio (ej. datos 
-    personales, motivo de la cita, nivel académico, presupuesto)?</p>
-    <input>
+            <p>¿Qué servicios principales deseas automatizar?</p>
+            <input type="text" placeholder="Servicios a automatizar">
 
-    <p>¿Tus servicios requieren pasos previos antes de confirmarse (ej. validación de 
-    horarios, pago anticipado)? </p>
-    <input>
+            <p>¿Qué información debe brindar el cliente para acceder al servicio?</p>
+            <input type="text" placeholder="Ej. datos personales, motivo de la cita...">
 
-    <p>¿Cómo reservas actualmente tus servicios (ej. llamada, formulario, WhatsApp)?</p>
-    <input>
+            <p>¿Tus servicios requieren pasos previos antes de confirmarse?</p>
+            <input type="text" placeholder="Ej. validación de horarios, pago anticipado">
 
-    <p>¿Necesitas mostrar disponibilidad de horarios en tiempo real? </p>
-    <input>
+            <p>¿Cómo reservas actualmente tus servicios?</p>
+            <input type="text" placeholder="Ej. llamada, formulario, WhatsApp">
 
-    <p>¿Qué métodos de pago aceptas (ej. tarjeta, efectivo, transferencia)? </p>
-    <input>
+            <p>¿Necesitas mostrar disponibilidad de horarios en tiempo real?</p>
+            <input type="text" placeholder="Sí / No">
 
-    <p>¿Cuál es tu política de cancelaciones o reprogramaciones? </p>
-    <input>
+            <p>¿Qué métodos de pago aceptas?</p>
+            <input type="text" placeholder="Ej. tarjeta, efectivo, transferencia">
 
-    <p>¿Qué preguntas frecuentes recibes antes de la contratación (ej. duración de la cita, 
-    costos, modalidad online/presencial)?</p>
-    <input>
+            <p>¿Cuál es tu política de cancelaciones o reprogramaciones?</p>
+            <input type="text" placeholder="Describe tu política">
 
-    <p>¿En qué canales atiendes a tus clientes (ej. WhatsApp, web, call center)? </p>
-    <input>
+            <p>¿Qué preguntas frecuentes recibes antes de la contratación?</p>
+            <input type="text" placeholder="Ej. duración, costos, modalidad...">
 
+            <p>¿En qué canales atiendes a tus clientes?</p>
+            <input type="text" placeholder="Ej. WhatsApp, web, call center">
 
-    <a href="final.html">
-        <button>Finalizar</button>
-    </a>
-    
+            <!-- Botón Final -->
+            <div style="margin-top: 2rem; text-align:center;">
+                <a href="final.html">
+                    <button>Finalizar</button>
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
