--- a/pages/final.html
+++ b/pages/final.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Botia - Finalizado</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/final.css">
 </head>
 <body>
   <div class="container">
@@ -13,15 +13,11 @@
     <h2>Por último...</h2>
     <p><strong>Pasos para enviar tu archivo:</strong></p>
     <ol>
-      <li>Descarga tu archivo PDF:</li>
-      <li>Ingresa a WhatsApp desde el botón de abajo.</li>
+      <li>Identifica el archivo descargado.</li>
+      <li>Ingresa a WhatsApp desde el botón que se encuentra en la parte inferior.</li>
       <li>Adjunta el archivo descargado en el chat.</li>
       <li>Envía el mensaje. Nuestro equipo lo recepcionará.</li>
     </ol>
-
-    <a id="downloadLink" download="respuestas.pdf">
-      <button type="button">📥 Descargar PDF</button>
-    </a>
 
     <a href="https://wa.me/51977446314?text=Saludos.%20Procedo%20a%20mandar%20el%20archivo%20del%20formulario"
        target="_blank">
