--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Botia</title>
-    <link rel="stylesheet" href="../css/style.css"> <!-- Asegúrate que esté en la misma carpeta -->
+    <link rel="stylesheet" href="../css/inicio.css"> <!-- Asegúrate que esté en la misma carpeta -->
 </head>
+
 <body>
     <div class="container">
         <!-- Caja de bienvenida -->
@@ -15,16 +17,13 @@
             <h2>Elige el rubro de tu empresa</h2>
             <p>Selecciona la opción que más se ajuste:</p>
 
-            <!-- Botones -->
+
             <div style="margin-top: 1.5rem;">
-                <a href="ecommerce.html">
-                    <button>E-commerce</button>
-                </a>
-                <a href="servicios.html">
-                    <button>Servicios</button>
-                </a>
+                <a href="ecommerce.html"><button>E-commerce</button></a><a
+                    href="servicios.html"><button>Servicios</button></a>
             </div>
         </div>
     </div>
 </body>
+
 </html>
