Actualizar proyecto con cambios locales y corrección de rutas

--- a/pages/final.html
+++ b/pages/final.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="/assents/logoBotia.png" alt="Botia Logo">
+    <img src="assents/logoBotia.png" alt="Botia Logo">
     <h1>¡Formulario realizado con éxito! 🙌</h1>
     <h2>Por último...</h2>
     <p><strong>Pasos para enviar tu archivo:</strong></p>
