--- a/pages/inicio.html
+++ b/pages/inicio.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!-- Caja de bienvenida -->
         <div class="welcome-box">
-            <img src="/assents/logoBotia.png" alt="Botia Logo" style="max-width: 200px; margin-bottom: 1rem;">
+            <img src="assents/logoBotia.png" alt="Botia Logo" style="max-width: 200px; margin-bottom: 1rem;">
             <h1>Bienvenido</h1>
             <h2>Elige el rubro de tu empresa</h2>
             <p>Selecciona la opción que más se ajuste:</p>
