--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container">
-        <img src="/assents/logoBotia.png" alt="Botia Logo" style="max-width: 180px; margin-bottom: 1rem;">
+        <img src="assents/logoBotia.png" alt="Botia Logo" style="max-width: 180px; margin-bottom: 1rem;">
 
         <div class="form-section">
             <h1>Formulario - Servicios</h1>
